After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727028 - Should not use legacy icon theme names for emblems
Should not use legacy icon theme names for emblems
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-25 16:22 UTC by David King
Modified: 2014-03-25 16:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
use non-legacy emblem names (1.17 KB, patch)
2014-03-25 16:33 UTC, David King
committed Details | Review

Description David King 2014-03-25 16:22:51 UTC
s reported downstream at https://bugzilla.redhat.com/show_bug.cgi?id=1077810 Nautilus depends on legacy symlinks from gnome-icon-theme-legacy. It should now be safe to use the new emblem names.
Comment 1 David King 2014-03-25 16:33:06 UTC
Created attachment 272867 [details] [review]
use non-legacy emblem names
Comment 2 Cosimo Cecchi 2014-03-25 16:38:38 UTC
Review of attachment 272867 [details] [review]:

Looks good, thanks David.
Comment 3 David King 2014-03-25 16:42:13 UTC
Comment on attachment 272867 [details] [review]
use non-legacy emblem names

Thanks, pushed to master! Is this also OK for gnome-3-12?
Comment 4 Cosimo Cecchi 2014-03-25 16:46:57 UTC
We haven't branched yet, so I think we're all set :-)