Do not use legacy emblem names

This avoids a dependency on the compatibility symlinks of
gnome-icon-theme-legacy.

https://bugzilla.redhat.com/show_bug.cgi?id=1080523
https://bugzilla.gnome.org/show_bug.cgi?id=727028